[package]
name = "small-acme"
version = "0.1.1"
edition = "2021"
license = "Apache-2.0"
description = "Small pure-Rust ACME client"
homepage = "https://github.com/Icelk/small-acme"
repository = "https://github.com/Icelk/small-acme"
keywords = ["letsencrypt", "acme"]
author = ["Icelk <main@icelk.dev>", "djc"]
categories = ["web-programming", "api-bindings"]
rust-version = "1.60.0"

[dependencies]
base64 = "0.21"
ring = { version = "0.16", features = ["std"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
ureq = { version = "2", default-features = false, features = ["json", "tls"] }

[dev-dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
env_logger = { version = "0.10.0", default-features = false, features = ["auto-color"] }
log = "0.4.17"
rcgen = "0.10"
